Adding health check for LB